<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:gravity="center|top"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textColor="#00FFFF"
            android:textSize="24sp" />

        <LinearLayout
            android:gravity="center|top"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/PreDiscAmtTitle" />

            <EditText
                android:ems="10"
                android:id="@+id/ET_PreDiscountAmount"
                android:inputType="numberDecimal"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                tools:ignore="Autofill"
                android:width="80dp" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center|top"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/PostDiscAmtTitle" />

            <EditText
                android:ems="10"
                android:id="@+id/ET_PostDiscountAmount"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_width="80dp"
                android:width="80dp" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/SB_TipPercent"
                android:layout_height="20dp"
                android:layout_width="250dp"
                android:max="50"
                android:min="5"
                android:progress="20" />

                <TextView
                    android:id="@+id/TV_TipPercent"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/PercentFldTitle"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center|top"
            android:layout_height="120dp"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center|top"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:gravity="center"
                    android:id="@+id/RG_RoundingBtns"
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RB_NoRound"
                        android:layout_height="wrap_content"
                        android:layout_width="80dp"
                        android:text="@string/NoRoundingBtnLbl" />

                    <RadioButton
                        android:id="@+id/RB_RoundDown"
                        android:layout_height="wrap_content"
                        android:layout_width="120dp"
                        android:text="@string/RoundDownBtnLbl" />

                    <RadioButton
                        android:id="@+id/RB_RoundUp"
                        android:layout_height="wrap_content"
                        android:layout_width="120dp"
                        android:text="@string/RoundUpBtnLbl" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/RoundingLbl" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center|top"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/TipLbl"
                android:textColor="#FF7F00" />

            <TextView
                android:ems="10"
                android:id="@+id/ET_TipAmt"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_width="80dp"
                android:textColor="#FF7F00"
                android:width="80dp" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center|top"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/TotalLbl"
                android:textColor="#00FF00" />

            <TextView
                android:ems="10"
                android:id="@+id/ET_TotalAmt"
                android:inputType="none"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:layout_width="80dp"
                android:textColor="#00FF00"
                android:width="80dp"
                 />
        </LinearLayout>

        <LinearLayout
            android:gravity="center|top"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B_AddABuck"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_width="150dp"
                android:text="@string/AddBuckBtnLbl" />

            <Button
                android:enabled="false"
                android:id="@+id/B_TakeABuck"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_width="150dp"
                android:text="@string/TakeBuckBtnLbl" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center|top"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B_Exit"
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/ExitBtnLbl"
                android:textColor="#FF0000" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>